# architecture

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.md
stk/: CMakeLists.txt
stk/include/stk/: rbtree.h  string.h  vector.h
stk/src/: export.h  rbtree_config.h  rbtree_double.c  rbtree_double.h  rbtree_float.c  rbtree_float.h  rbtree_int.c  rbtree_int.h  rbtree_pointer.c  rbtree_pointer.h  rbtree_string.c  rbtree_string.h  stk_export.h  stk_rbtree_config.h  stk_rbtree_double.c  stk_rbtree_double.h  stk_rbtree_float.c  stk_rbtree_float.h  stk_rbtree_int.c  stk_rbtree_int.h  stk_rbtree_pointer.c  stk_rbtree_pointer.h  stk_rbtree_string.c  stk_rbtree_string.h  stk_string.c  stk_string.h  stk_string_config.h  stk_vector_config.h  stk_vector_double.c  stk_vector_double.h  stk_vector_float.c  stk_vector_float.h  stk_vector_int.c  stk_vector_int.h  stk_vector_pointer.c  stk_vector_pointer.h  stk_vector_string.c  stk_vector_string.h  string.c  string.h  (+12 more)
stk/src/cpp/: rbtree.h  rbtree.tcc  stk_rbtree.hpp  stk_rbtree.tcc  stk_string.hpp  stk_string.tcc  stk_vector.hpp  stk_vector.tcc  string.h  string.tcc  vector.h  vector.tcc
stk/tests/: test_rbtree.cpp  test_vector.c  test_vector.cpp
