# ============== 커쩌긴좆 ==============
set(STK_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(STK_SRC_CXX_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp)
set(STK_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(STK_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
set(STK_UTIL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/utils)

# ============== 朞淃 ==============
option(BUILD_CLIB "Build C version" ON)
option(BUILD_SHARED_LIBS "Build shared library" ON)
option(BUILD_VECTOR "Build Vector module" ON)
option(BUILD_RBTREE "Build RBTree module" ON)
option(BUILD_STRING "Build String module" ON)
option(BUILD_TESTS "Build tests" OFF)

set(INTERNAL_INCLUDE_DIR ${STK_INCLUDE_DIR}/stk/internal)
file(MAKE_DIRECTORY ${INTERNAL_INCLUDE_DIR})

# ============== 코꼬庫匡숭 ==============
set(C_INTERNAL_HEADERS
    ${STK_SRC_DIR}/export.h
    ${STK_SRC_DIR}/rbtree_config.h
    ${STK_SRC_DIR}/vector_config.h
)

set(VECTOR_C_HEADERS
    ${STK_SRC_DIR}/vector_int.h
    ${STK_SRC_DIR}/vector_float.h
    ${STK_SRC_DIR}/vector_double.h
    ${STK_SRC_DIR}/vector_pointer.h
    ${STK_SRC_DIR}/vector_string.h
)

set(RBTREE_C_HEADERS
    ${STK_SRC_DIR}/rbtree_int.h
    ${STK_SRC_DIR}/rbtree_float.h
    ${STK_SRC_DIR}/rbtree_double.h
    ${STK_SRC_DIR}/rbtree_pointer.h
    ${STK_SRC_DIR}/rbtree_string.h
)

set(STRING_C_HEADERS
    ${STK_SRC_DIR}/string.h
)

set(CPP_INTERNAL_HEADERS
    ${STK_SRC_CXX_DIR}/string.h
    ${STK_SRC_CXX_DIR}/string.tcc
    ${STK_SRC_CXX_DIR}/vector.h
    ${STK_SRC_CXX_DIR}/vector.tcc
    ${STK_SRC_CXX_DIR}/rbtree.h
    ${STK_SRC_CXX_DIR}/rbtree.tcc
)

# 릿齡杰唐庫匡숭
file(COPY ${C_INTERNAL_HEADERS} ${VECTOR_C_HEADERS} ${RBTREE_C_HEADERS} ${STRING_C_HEADERS}
    DESTINATION ${INTERNAL_INCLUDE_DIR}
)
file(COPY ${CPP_INTERNAL_HEADERS}
    DESTINATION ${INTERNAL_INCLUDE_DIR}
)

# ============== 澗섞杰唐 OBJECT 匡숭 ==============
set(ALL_OBJECTS "")

# ============== 1. Vector 친욥 ==============
if(BUILD_VECTOR)
    set(VECTOR_TYPES
        int
        float
        double 
        pointer
        string
    )
    
    foreach(TYPE ${VECTOR_TYPES})
        add_library(stk_vector_${TYPE} OBJECT 
            ${STK_SRC_DIR}/vector_${TYPE}.c
        )
        
        target_include_directories(stk_vector_${TYPE}
            PUBLIC  $<BUILD_INTERFACE:${STK_INCLUDE_DIR}> $<INSTALL_INTERFACE:include/stk>
            PRIVATE ${STK_SRC_DIR} ${STK_UTIL_DIR}
        )
        
        if(BUILD_SHARED_LIBS)
            target_compile_definitions(stk_vector_${TYPE}
                PUBLIC STK_LIBC PRIVATE STK_EXPORTING
            )
        else()
            target_compile_definitions(stk_vector_${TYPE}
                PUBLIC STK_LIBC
            )
        endif()
        
        if(MSVC)
            target_compile_options(stk_vector_${TYPE} PRIVATE /W4 /wd4013 /wd4047 /wd4996)
        else()
            target_compile_options(stk_vector_${TYPE} PRIVATE -Wall -Wextra -Wpedantic -Wno-error=implicit-function-declaration -fPIC)
        endif()

        list(APPEND ALL_OBJECTS $<TARGET_OBJECTS:stk_vector_${TYPE}>)
    endforeach()
endif()

# ============== 2. RBTree 친욥 ==============
if(BUILD_RBTREE)
    set(RBTREE_TYPES
        int
        float
        double
        pointer
        string
    )
    
    foreach(TYPE ${RBTREE_TYPES})
        add_library(stk_rbtree_${TYPE} OBJECT 
            ${STK_SRC_DIR}/rbtree_${TYPE}.c
        )
        
        target_include_directories(stk_rbtree_${TYPE}
            PUBLIC  $<BUILD_INTERFACE:${STK_INCLUDE_DIR}> $<INSTALL_INTERFACE:include/stk>
            PRIVATE ${STK_SRC_DIR} ${STK_UTIL_DIR}
        )
        
        if(BUILD_SHARED_LIBS)
            target_compile_definitions(stk_rbtree_${TYPE}
                PUBLIC STK_LIBC PRIVATE STK_EXPORTING
            )
        else()
            target_compile_definitions(stk_rbtree_${TYPE}
                PUBLIC STK_LIBC
            )
        endif()
        
        if(MSVC)
            target_compile_options(stk_rbtree_${TYPE} PRIVATE /W4 /wd4013 /wd4047 /wd4996)
        else()
            target_compile_options(stk_rbtree_${TYPE} PRIVATE -Wall -Wextra -Wpedantic -Wno-error=implicit-function-declaration -fPIC)
        endif()

        list(APPEND ALL_OBJECTS $<TARGET_OBJECTS:stk_rbtree_${TYPE}>)
    endforeach()
endif()

# ============== 3. String 친욥 ==============
if(BUILD_STRING)
    add_library(stk_string OBJECT ${STK_SRC_DIR}/string.c)
    
    target_include_directories(stk_string
        PUBLIC  $<BUILD_INTERFACE:${STK_INCLUDE_DIR}> $<INSTALL_INTERFACE:include/stk>
        PRIVATE ${STK_SRC_DIR} ${STK_UTIL_DIR}
    )
    
    if(BUILD_SHARED_LIBS)
        target_compile_definitions(stk_string PUBLIC STK_LIBC PRIVATE STK_EXPORTING)
    else()
        target_compile_definitions(stk_string PUBLIC STK_LIBC)
    endif()
    
    if(MSVC)
        target_compile_options(stk_string PRIVATE /W4 /wd4013 /wd4047 /wd4996)
    else()
        target_compile_options(stk_string PRIVATE -Wall -Wextra -Wpedantic -Wno-error=implicit-function-declaration -fPIC)
    endif()

    list(APPEND ALL_OBJECTS $<TARGET_OBJECTS:stk_string>)
endif()

# ============== 寮욋 ==============
if(BUILD_CLIB)
    if(BUILD_SHARED_LIBS)
        message(STATUS "Building Shared Library ...")
        
        add_library(stk SHARED ${ALL_OBJECTS})
        add_library(stk::stk ALIAS stk)
        
        target_include_directories(stk 
            PUBLIC  $<BUILD_INTERFACE:${STK_INCLUDE_DIR}> $<INSTALL_INTERFACE:include/stk>
            PRIVATE ${STK_SRC_DIR} ${STK_UTIL_DIR}
        )
        
        if(MSVC)
            target_compile_definitions(stk PRIVATE STK_EXPORTING PUBLIC STK_LIBC STK_DLL)
            set_target_properties(stk PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
        else()
            target_compile_definitions(stk PRIVATE STK_EXPORTING PUBLIC STK_LIBC)
        endif()
        
        if(MSVC)
            target_compile_options(stk PRIVATE /W4 /wd4013 /wd4047 /wd4996)
        else()
            target_compile_options(stk PRIVATE -Wall -Wextra -Wpedantic)
        endif()
        
        if(CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
            target_link_libraries(stk PRIVATE m)
        endif()
        
        set_target_properties(stk PROPERTIES
            VERSION ${PROJECT_VERSION}
            SOVERSION ${PROJECT_VERSION_MAJOR}
            OUTPUT_NAME "stk"
        )
        
    else()
        message(STATUS "Building Static Library ...")
        
        add_library(stk STATIC ${ALL_OBJECTS})
        add_library(stk::stk ALIAS stk)
        
        target_include_directories(stk 
            PUBLIC  $<BUILD_INTERFACE:${STK_INCLUDE_DIR}> $<INSTALL_INTERFACE:include/stk>
            PRIVATE ${STK_SRC_DIR} ${STK_UTIL_DIR}
        )
        
        target_compile_definitions(stk PUBLIC STK_LIBC)
        
        if(MSVC)
            target_compile_options(stk PRIVATE /W4 /wd4013 /wd4047 /wd4996)
        else()
            target_compile_options(stk PRIVATE -Wall -Wextra -Wpedantic)
        endif()
        
        if(CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
            target_link_libraries(stk PRIVATE m)
        endif()
        
        set_target_properties(stk PROPERTIES
            VERSION ${PROJECT_VERSION}
            SOVERSION ${PROJECT_VERSION_MAJOR}
            OUTPUT_NAME "stk"
        )
    endif()
    
    # ============== 갛陋 ==============
    install(TARGETS stk
        EXPORT StkTargets
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        INCLUDES DESTINATION include/stk
    )
    
    # ============== 무묾庫匡숭 ==============
    set(PUBLIC_HEADERS
        ${STK_INCLUDE_DIR}/stk/vector.h
        ${STK_INCLUDE_DIR}/stk/string.h
        ${STK_INCLUDE_DIR}/stk/rbtree.h
    )
    
    install(FILES ${PUBLIC_HEADERS} DESTINATION include/stk)
    
    # ============== 코꼬庫匡숭 ==============
    install(FILES ${C_INTERNAL_HEADERS} DESTINATION include/stk/internal)
    install(FILES ${VECTOR_C_HEADERS} DESTINATION include/stk/internal)
    install(FILES ${RBTREE_C_HEADERS} DESTINATION include/stk/internal)
    install(FILES ${STRING_C_HEADERS} DESTINATION include/stk/internal)
    install(FILES ${CPP_INTERNAL_HEADERS} DESTINATION include/stk/internal)
    
    # ============== 돔놔토零 ==============
    include(CMakePackageConfigHelpers)
    
    install(EXPORT StkTargets
        FILE StkTargets.cmake
        NAMESPACE stk::
        DESTINATION lib/cmake/stk
    )
    
    write_basic_package_version_file(
        ${CMAKE_BINARY_DIR}/StkConfigVersion.cmake
        VERSION ${PROJECT_VERSION}
        COMPATIBILITY AnyNewerVersion
    )
    
    install(FILES ${CMAKE_BINARY_DIR}/StkConfigVersion.cmake
        DESTINATION lib/cmake/stk
    )
endif()

# ============== 긍陋斤口 ==============
message(STATUS "")
message(STATUS "STK Library Configuration:")
message(STATUS "  Source dir:      ${STK_SRC_DIR}")
message(STATUS "  Include dir:     ${STK_INCLUDE_DIR}")
message(STATUS "  Modules:")
message(STATUS "    Vector:        ${BUILD_VECTOR}")
message(STATUS "    RBTree:        ${BUILD_RBTREE}")
message(STATUS "    String:        ${BUILD_STRING}")
message(STATUS "  Shared:          ${BUILD_SHARED_LIBS}")
message(STATUS "  Tests:           ${BUILD_TESTS}")
message(STATUS "")